---
source: crates/pgls_pretty_print/tests/tests.rs
input_file: crates/pgls_pretty_print/tests/data/multi/identity.sql
snapshot_kind: text
---
SELECT
  attrelid,
  attname,
  attidentity
FROM
  pg_attribute
WHERE
  attidentity NOT IN ('', 'a', 'd');

CREATE TABLE itest1 (
  a INT GENERATED BY DEFAULT AS IDENTITY,
  b TEXT
);

CREATE TABLE itest2 (
  a BIGINT GENERATED ALWAYS AS IDENTITY,
  b TEXT
);

CREATE TABLE itest3 (
  a SMALLINT
  GENERATED BY DEFAULT
  AS IDENTITY
  (START WITH 7
  INCREMENT BY 5),
  b TEXT
);

ALTER TABLE itest3
  ALTER COLUMN a
  ADD GENERATED ALWAYS AS IDENTITY;

SELECT
  table_name,
  column_name,
  column_default,
  is_nullable,
  is_identity,
  identity_generation,
  identity_start,
  identity_increment,
  identity_maximum,
  identity_minimum,
  identity_cycle
FROM
  information_schema.columns
WHERE
  table_name LIKE 'itest_'
ORDER BY 1,
  2;

SELECT
  sequence_name
FROM
  information_schema.sequences
WHERE
  sequence_name LIKE 'itest%';

SELECT pg_get_serial_sequence('itest1', 'a');

CREATE TABLE itest4 (
  a INT,
  b TEXT
);

ALTER TABLE itest4
  ALTER COLUMN a
  ADD GENERATED ALWAYS AS IDENTITY;

ALTER TABLE itest4
  ALTER COLUMN a SET NOT NULL;

ALTER TABLE itest4
  ALTER COLUMN c
  ADD GENERATED ALWAYS AS IDENTITY;

ALTER TABLE itest4
  ALTER COLUMN a
  ADD GENERATED ALWAYS AS IDENTITY;

ALTER TABLE itest4
  ALTER COLUMN a DROP NOT NULL;

ALTER TABLE itest4
  ALTER COLUMN a
  ADD GENERATED ALWAYS AS IDENTITY;

ALTER TABLE itest4
  ALTER COLUMN b
  ADD GENERATED ALWAYS AS IDENTITY;

ALTER TABLE itest4
  ALTER COLUMN b SET DEFAULT '';

CREATE TABLE itest_err_1 (a TEXT GENERATED BY DEFAULT AS IDENTITY);

CREATE TABLE itest_err_2 (
  a INT
  GENERATED ALWAYS AS IDENTITY
  GENERATED BY DEFAULT AS IDENTITY
);

CREATE TABLE itest_err_3 (a INT DEFAULT 5 GENERATED BY DEFAULT AS IDENTITY);

CREATE TABLE itest_err_4 (a serial GENERATED BY DEFAULT AS IDENTITY);

INSERT INTO itest1 DEFAULT VALUES;

INSERT INTO itest1 DEFAULT VALUES;

INSERT INTO itest2 DEFAULT VALUES;

INSERT INTO itest2 DEFAULT VALUES;

INSERT INTO itest3 DEFAULT VALUES;

INSERT INTO itest3 DEFAULT VALUES;

INSERT INTO itest4 DEFAULT VALUES;

INSERT INTO itest4 DEFAULT VALUES;

SELECT * FROM itest1;

SELECT * FROM itest2;

SELECT * FROM itest3;

SELECT * FROM itest4;

CREATE TABLE itest5 (
  a INT GENERATED ALWAYS AS IDENTITY,
  b TEXT
);

INSERT INTO itest5 VALUES (1, 'a');

INSERT INTO itest5 VALUES (DEFAULT, 'a');

INSERT INTO itest5 VALUES (2, 'b'), (3, 'c');

INSERT INTO itest5 VALUES (DEFAULT, 'b'), (3, 'c');

INSERT INTO itest5 VALUES (2, 'b'), (DEFAULT, 'c');

INSERT INTO itest5 VALUES (DEFAULT, 'b'), (DEFAULT, 'c');

INSERT INTO itest5 OVERRIDING SYSTEM VALUE VALUES (-1, 'aa');

INSERT INTO itest5 OVERRIDING SYSTEM VALUE VALUES (-2, 'bb'), (-3, 'cc');

INSERT INTO itest5 OVERRIDING SYSTEM VALUE VALUES (DEFAULT, 'dd'), (-4, 'ee');

INSERT INTO itest5 OVERRIDING SYSTEM VALUE VALUES (-5, 'ff'), (DEFAULT, 'gg');

INSERT INTO itest5
OVERRIDING SYSTEM VALUE
VALUES (DEFAULT, 'hh'), (DEFAULT, 'ii');

INSERT INTO itest5 OVERRIDING USER VALUE VALUES (-1, 'aaa');

INSERT INTO itest5 OVERRIDING USER VALUE VALUES (-2, 'bbb'), (-3, 'ccc');

INSERT INTO itest5 OVERRIDING USER VALUE VALUES (DEFAULT, 'ddd'), (-4, 'eee');

INSERT INTO itest5 OVERRIDING USER VALUE VALUES (-5, 'fff'), (DEFAULT, 'ggg');

INSERT INTO itest5
OVERRIDING USER VALUE
VALUES
  (DEFAULT, 'hhh'),
  (DEFAULT, 'iii');

SELECT * FROM itest5;

DROP TABLE "itest5";

INSERT INTO itest3 VALUES (DEFAULT, 'a');

INSERT INTO itest3 VALUES (DEFAULT, 'b'), (DEFAULT, 'c');

SELECT * FROM itest3;

INSERT INTO itest1 VALUES (10, 'xyz');

INSERT INTO itest1 OVERRIDING SYSTEM VALUE VALUES (20, 'xyz');

INSERT INTO itest1 OVERRIDING USER VALUE VALUES (30, 'xyz');

SELECT * FROM itest1;

INSERT INTO itest2 VALUES (10, 'xyz');

INSERT INTO itest2 OVERRIDING SYSTEM VALUE VALUES (20, 'xyz');

INSERT INTO itest2 OVERRIDING USER VALUE VALUES (30, 'xyz');

SELECT * FROM itest2;

UPDATE itest1 SET a = 101 WHERE a = 1;

UPDATE itest1 SET a = DEFAULT WHERE a = 2;

SELECT * FROM itest1;

UPDATE itest2 SET a = 101 WHERE a = 1;

UPDATE itest2 SET a = DEFAULT WHERE a = 2;

SELECT * FROM itest2;

CREATE TABLE itest9 (
  a INT GENERATED ALWAYS AS IDENTITY,
  b TEXT,
  c BIGINT
);

SELECT * FROM itest9 ORDER BY c;

ALTER TABLE itest4
  ALTER COLUMN a DROP IDENTITY;

ALTER TABLE itest4
  ALTER COLUMN a DROP IDENTITY;

ALTER TABLE itest4
  ALTER COLUMN a DROP IDENTITY IF EXISTS;

INSERT INTO itest4 DEFAULT VALUES;

ALTER TABLE itest4
  ALTER COLUMN a DROP NOT NULL;

INSERT INTO itest4 DEFAULT VALUES;

SELECT * FROM itest4;

SELECT sequence_name FROM itest4_a_seq;

CREATE TABLE itest10 (
  a INT GENERATED BY DEFAULT AS IDENTITY,
  b TEXT
);

CREATE TABLE itest11 (
  a INT GENERATED ALWAYS AS IDENTITY,
  b TEXT
);

CREATE VIEW itestv10
AS SELECT * FROM itest10;

CREATE VIEW itestv11
AS SELECT * FROM itest11;

INSERT INTO itestv10 DEFAULT VALUES;

INSERT INTO itestv10 DEFAULT VALUES;

INSERT INTO itestv11 DEFAULT VALUES;

INSERT INTO itestv11 DEFAULT VALUES;

SELECT * FROM itestv10;

SELECT * FROM itestv11;

INSERT INTO itestv10 VALUES (10, 'xyz');

INSERT INTO itestv10 OVERRIDING USER VALUE VALUES (11, 'xyz');

SELECT * FROM itestv10;

INSERT INTO itestv11 VALUES (10, 'xyz');

INSERT INTO itestv11 OVERRIDING SYSTEM VALUE VALUES (11, 'xyz');

SELECT * FROM itestv11;

DROP VIEW "itestv10", "itestv11";

CREATE TABLE itest13 (a INT);

ALTER TABLE itest13
  ADD COLUMN b INT GENERATED BY DEFAULT AS IDENTITY;

INSERT INTO itest13 VALUES (1), (2), (3);

ALTER TABLE itest13
  ADD COLUMN c INT GENERATED BY DEFAULT AS IDENTITY;

SELECT * FROM itest13;

ALTER TABLE itest1
  ALTER COLUMN a SET DEFAULT 1;

CREATE TABLE itest5 (
  a serial,
  b TEXT
);

ALTER TABLE itest5
  ALTER COLUMN a
  ADD GENERATED ALWAYS AS IDENTITY;

ALTER TABLE itest3
  ALTER COLUMN a TYPE INT;

SELECT
  CAST(seqtypid AS REGTYPE)
FROM
  pg_sequence
WHERE
  seqrelid =
  CAST('itest3_a_seq' AS REGCLASS);

ALTER TABLE itest3
  ALTER COLUMN a TYPE TEXT;

CREATE UNLOGGED TABLE itest17 (
  a INT NOT NULL,
  b TEXT
);

ALTER TABLE itest17
  ALTER COLUMN a
  ADD GENERATED ALWAYS AS IDENTITY;

ALTER TABLE itest17
  ADD COLUMN c INT GENERATED ALWAYS AS IDENTITY;

CREATE TABLE itest18 (
  a INT NOT NULL,
  b TEXT
);

ALTER TABLE itest18
  SET UNLOGGED,
  ALTER COLUMN a
  ADD GENERATED ALWAYS AS IDENTITY;

ALTER TABLE itest18
  SET LOGGED;

ALTER TABLE itest18
  SET UNLOGGED;

ALTER TABLE itest3
  ADD COLUMN c INT GENERATED BY DEFAULT AS IDENTITY,
  ALTER COLUMN c SET GENERATED ALWAYS;

CREATE TABLE itest6 (
  a INT GENERATED ALWAYS AS IDENTITY,
  b TEXT
);

INSERT INTO itest6 DEFAULT VALUES;
